--- a/喜马拉雅/classes/discover(发现)/view/circle(圈子)/cicle/RCRecommendPostViewCell.xib
+++ b/喜马拉雅/classes/discover(发现)/view/circle(圈子)/cicle/RCRecommendPostViewCell.xib
@@ -7,8 +7,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="postCell" rowHeight="327" id="KGk-i7-Jjw" customClass="RCRecommendPostViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="327"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="postCell" rowHeight="277" id="KGk-i7-Jjw" customClass="RCRecommendPostViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="277"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -32,7 +32,10 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="正文" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EPt-Th-lGp">
-                        <rect key="frame" x="23" y="81" width="289" height="16"/>
+                        <rect key="frame" x="23" y="75" width="289" height="50"/>
+                        <constraints>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="S20-vA-Wet"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
@@ -57,42 +60,47 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Oru-88-pb0">
-                        <rect key="frame" x="110" y="107" width="99" height="110"/>
+                        <rect key="frame" x="110" y="130" width="99" height="100"/>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="C0Y-7z-JVD">
-                        <rect key="frame" x="212" y="107" width="100" height="110"/>
+                        <rect key="frame" x="212" y="130" width="100" height="100"/>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FTg-4U-vdm">
-                        <rect key="frame" x="8" y="107" width="100" height="110"/>
+                        <rect key="frame" x="8" y="130" width="100" height="100"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="110" id="fCf-gN-EjT"/>
+                            <constraint firstAttribute="height" constant="100" id="fCf-gN-EjT"/>
                         </constraints>
                     </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a4A-bw-07H">
+                        <rect key="frame" x="-8" y="0.0" width="336" height="8"/>
+                        <color key="backgroundColor" red="0.87450980389999999" green="0.87450980389999999" blue="0.87450980389999999" alpha="0.57999999999999996" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="8" id="m6D-ce-tZe"/>
+                        </constraints>
+                    </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fXz-KA-1Kj">
-                        <rect key="frame" x="8" y="227" width="312" height="83"/>
+                        <rect key="frame" x="4" y="230" width="313" height="38"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fDF-NS-Gct">
-                                <rect key="frame" x="256" y="31" width="56" height="21"/>
+                            <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fDF-NS-Gct">
+                                <rect key="frame" x="257" y="12" width="56" height="14"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="56" id="me7-1A-ONr"/>
+                                    <constraint firstAttribute="height" constant="14" id="aYU-q1-EFV"/>
+                                    <constraint firstAttribute="width" constant="56" id="wFd-uU-5Yr"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                <state key="normal" title="123" image="zone_post_red">
+                                <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="4" maxY="0.0"/>
+                                <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="5" maxY="0.0"/>
+                                <state key="normal" title="123" image="topic_comment_n">
                                     <color key="titleColor" red="1" green="0.46942787120000001" blue="0.13712519940000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
                         </subviews>
                         <constraints>
-                            <constraint firstAttribute="centerY" secondItem="fDF-NS-Gct" secondAttribute="centerY" id="Uc5-QF-5rj"/>
-                            <constraint firstAttribute="trailing" secondItem="fDF-NS-Gct" secondAttribute="trailing" id="g6H-GF-dsA"/>
-                        </constraints>
-                    </view>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a4A-bw-07H">
-                        <rect key="frame" x="-8" y="0.0" width="336" height="8"/>
-                        <color key="backgroundColor" red="0.87450980389999999" green="0.87450980389999999" blue="0.87450980389999999" alpha="0.57999999999999996" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="8" id="m6D-ce-tZe"/>
+                            <constraint firstAttribute="trailing" secondItem="fDF-NS-Gct" secondAttribute="trailing" id="Eb9-fR-cw8"/>
+                            <constraint firstAttribute="height" constant="38" id="LL8-4H-gZq"/>
+                            <constraint firstAttribute="centerY" secondItem="fDF-NS-Gct" secondAttribute="centerY" id="WGa-W0-fgf"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -103,29 +111,29 @@
                     <constraint firstItem="F2p-L1-MWH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="4" id="DIJ-Zz-CuW"/>
                     <constraint firstItem="57A-Je-Lcr" firstAttribute="leading" secondItem="F2p-L1-MWH" secondAttribute="trailing" constant="8" id="FOx-8n-Hvn"/>
                     <constraint firstItem="FTg-4U-vdm" firstAttribute="height" secondItem="Oru-88-pb0" secondAttribute="height" id="IK9-D9-Czy"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="fXz-KA-1Kj" secondAttribute="trailing" constant="-5" id="Irz-g9-4kh"/>
                     <constraint firstItem="57A-Je-Lcr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="4" id="K7y-E3-6UD"/>
                     <constraint firstItem="WNK-HB-B7a" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="KKx-Jc-Pbg"/>
                     <constraint firstItem="FTg-4U-vdm" firstAttribute="top" secondItem="Oru-88-pb0" secondAttribute="top" id="Kz1-3Z-M3d"/>
                     <constraint firstItem="FTg-4U-vdm" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Mgm-1y-7uH"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="fXz-KA-1Kj" secondAttribute="bottom" constant="8" id="NT6-pu-MFt"/>
-                    <constraint firstItem="fXz-KA-1Kj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="QLa-0u-XFd"/>
                     <constraint firstItem="C0Y-7z-JVD" firstAttribute="top" secondItem="Oru-88-pb0" secondAttribute="top" id="Qod-rM-jby"/>
                     <constraint firstItem="FTg-4U-vdm" firstAttribute="width" secondItem="Oru-88-pb0" secondAttribute="width" id="RSP-qf-noE"/>
                     <constraint firstItem="EPt-Th-lGp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="15" id="Waw-ge-9BW"/>
-                    <constraint firstItem="fXz-KA-1Kj" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" constant="8" id="Z9N-Le-EwF"/>
                     <constraint firstItem="WNK-HB-B7a" firstAttribute="top" secondItem="F2p-L1-MWH" secondAttribute="bottom" constant="10" id="ZZR-Xk-09R"/>
                     <constraint firstItem="C0Y-7z-JVD" firstAttribute="leading" secondItem="Oru-88-pb0" secondAttribute="trailing" constant="3" id="aqL-VU-mpR"/>
                     <constraint firstItem="C0Y-7z-JVD" firstAttribute="height" secondItem="Oru-88-pb0" secondAttribute="height" id="avI-mB-VNA"/>
-                    <constraint firstItem="FTg-4U-vdm" firstAttribute="top" secondItem="EPt-Th-lGp" secondAttribute="bottom" constant="10" id="c4Y-Fc-gLJ"/>
+                    <constraint firstItem="FTg-4U-vdm" firstAttribute="top" secondItem="EPt-Th-lGp" secondAttribute="bottom" constant="5" id="c4Y-Fc-gLJ"/>
                     <constraint firstItem="Oru-88-pb0" firstAttribute="leading" secondItem="FTg-4U-vdm" secondAttribute="trailing" constant="2" id="cTD-QW-eOy"/>
                     <constraint firstItem="a4A-bw-07H" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-8" id="d3y-E4-PiJ"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="fXz-KA-1Kj" secondAttribute="bottom" id="eeY-ZJ-VyF"/>
                     <constraint firstAttribute="trailingMargin" secondItem="a4A-bw-07H" secondAttribute="trailing" constant="-16" id="ezO-Me-nOY"/>
                     <constraint firstItem="C0Y-7z-JVD" firstAttribute="leading" secondItem="Oru-88-pb0" secondAttribute="trailing" constant="3" id="fbI-pp-n6l"/>
+                    <constraint firstItem="fXz-KA-1Kj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-4" id="hfA-Fr-uAm"/>
                     <constraint firstItem="WNK-HB-B7a" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="imW-29-e55"/>
                     <constraint firstItem="a4A-bw-07H" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-16" id="mEt-Y0-LDM"/>
-                    <constraint firstItem="EPt-Th-lGp" firstAttribute="top" secondItem="WNK-HB-B7a" secondAttribute="bottom" constant="11" id="n1t-3X-9wl"/>
+                    <constraint firstItem="EPt-Th-lGp" firstAttribute="top" secondItem="WNK-HB-B7a" secondAttribute="bottom" constant="5" id="n1t-3X-9wl"/>
                     <constraint firstItem="C0Y-7z-JVD" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="nw9-ke-dgi"/>
-                    <constraint firstItem="fXz-KA-1Kj" firstAttribute="top" secondItem="FTg-4U-vdm" secondAttribute="bottom" constant="10" id="u2w-im-Q8l"/>
+                    <constraint firstItem="fXz-KA-1Kj" firstAttribute="top" secondItem="FTg-4U-vdm" secondAttribute="bottom" id="s2l-a4-4Gh"/>
                     <constraint firstItem="EPt-Th-lGp" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="uTG-fv-SC5"/>
                     <constraint firstItem="F2p-L1-MWH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="vgV-fd-vEh"/>
                     <constraint firstItem="Oru-88-pb0" firstAttribute="leading" secondItem="FTg-4U-vdm" secondAttribute="trailing" constant="2" id="x2Z-39-7MZ"/>
@@ -141,13 +149,14 @@
                 <outlet property="numOfCommentsButton" destination="fDF-NS-Gct" id="TC5-SP-USO"/>
                 <outlet property="timeLabel" destination="9NK-bB-GQm" id="Xb2-HM-q2k"/>
                 <outlet property="titleLabel" destination="WNK-HB-B7a" id="dQk-KL-kXf"/>
+                <outlet property="toolbarTopCon" destination="s2l-a4-4Gh" id="9H6-yF-mSG"/>
                 <outlet property="userNameLabel" destination="57A-Je-Lcr" id="JPZ-vl-gkG"/>
             </connections>
-            <point key="canvasLocation" x="573" y="501.5"/>
+            <point key="canvasLocation" x="573" y="476.5"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="findCategory_default" width="60" height="70"/>
-        <image name="zone_post_red" width="21" height="21"/>
+        <image name="topic_comment_n" width="14" height="13"/>
     </resources>
 </document>
