--- a/喜马拉雅/classes/discover(发现)/view/circle(圈子)/postDeail(评论)/RCCommentViewCell.xib
+++ b/喜马拉雅/classes/discover(发现)/view/circle(圈子)/postDeail(评论)/RCCommentViewCell.xib
@@ -8,23 +8,23 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="commentViewCell" rowHeight="265" id="KGk-i7-Jjw" customClass="RCCommentViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="333" height="265"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="265"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H1z-pe-6dA" userLabel="正文的view">
-                        <rect key="frame" x="8" y="8" width="317" height="136"/>
+                        <rect key="frame" x="8" y="8" width="304" height="105"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="时间" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kfs-if-6gG">
-                                <rect key="frame" x="270" y="16" width="22" height="14"/>
+                                <rect key="frame" x="257" y="16" width="22" height="14"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                 <color key="textColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="几楼" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fUF-1d-QJL">
-                                <rect key="frame" x="292" y="12" width="25" height="21"/>
+                                <rect key="frame" x="279" y="12" width="25" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="25" id="XBS-YK-oCN"/>
                                     <constraint firstAttribute="height" constant="21" id="ah9-BJ-cAE"/>
@@ -38,7 +38,7 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zfX-XW-3zF">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="topic_lz" translatesAutoresizingMaskIntoConstraints="NO" id="zfX-XW-3zF">
                                 <rect key="frame" x="76" y="15" width="31" height="16"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="31" id="dd1-jG-J2x"/>
@@ -53,12 +53,13 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="248" verticalCompressionResistancePriority="749" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Duh-J3-QEa">
-                                <rect key="frame" x="11" y="41" width="294" height="95"/>
+                                <rect key="frame" x="11" y="41" width="281" height="64"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="gaw-pQ-CXo"/>
                                 </constraints>
                                 <string key="text">正文正文正文正文正文正正文正文正文正文正文正文正文正文正文正文正正文正文正文正文正文正文正文正文正文正文正正文正文正文正文正文正文正文正文正文正文正正文正文正文正文正文正文正文正文正文正文正正文正文正文正文正文正文正文正文正文正文正正文正文正文正文正文正文正文正文正文正文正正文正文正文正文正文</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" red="0.30052477900000002" green="0.30052477900000002" blue="0.30052477900000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -80,16 +81,16 @@
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9nI-5E-vtl" userLabel="分割线">
-                        <rect key="frame" x="8" y="144" width="317" height="5"/>
+                        <rect key="frame" x="8" y="113" width="304" height="5"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="5" id="jpB-qc-aIa"/>
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uZo-De-SDp" userLabel="转发的view">
-                        <rect key="frame" x="40" y="154" width="272" height="67"/>
+                        <rect key="frame" x="40" y="123" width="259" height="98"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="时间" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="heu-E7-c52">
-                                <rect key="frame" x="219" y="3" width="22" height="14"/>
+                                <rect key="frame" x="206" y="8" width="22" height="14"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                 <color key="textColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
@@ -98,15 +99,16 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="转发正文转发正文转发正文转发正文转发正文转发正文转发正文转发正文转发正文转发正文转发正文转发正文转发正文转发正文转发正文" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cTK-Oy-saj">
-                                <rect key="frame" x="8" y="20" width="260" height="47"/>
+                                <rect key="frame" x="8" y="30" width="247" height="63"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" red="0.30052477900000002" green="0.30052477900000002" blue="0.30052477900000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="autoCollapse" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="findCategory_default" translatesAutoresizingMaskIntoConstraints="NO" id="m6h-iv-WZD">
-                                <rect key="frame" x="8" y="0.0" width="20" height="20"/>
+                                <rect key="frame" x="8" y="5" width="20" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="gkh-m9-HPj"/>
                                     <constraint firstAttribute="width" constant="20" id="qUm-sw-dFO"/>
@@ -116,7 +118,7 @@
                                 </userDefinedRuntimeAttributes>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="用户名" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PSn-as-Rz7">
-                                <rect key="frame" x="36" y="0.0" width="33" height="20"/>
+                                <rect key="frame" x="36" y="0.0" width="33" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                 <color key="textColor" red="1" green="0.46942787120000001" blue="0.13712519940000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -125,7 +127,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="几楼" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ez4-ZC-B6o" userLabel="楼主">
-                                <rect key="frame" x="246" y="3" width="22" height="14"/>
+                                <rect key="frame" x="233" y="8" width="22" height="14"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                 <nil key="highlightedColor"/>
                                 <userDefinedRuntimeAttributes>
@@ -142,11 +144,11 @@
                             <constraint firstItem="Ez4-ZC-B6o" firstAttribute="leading" secondItem="heu-E7-c52" secondAttribute="trailing" constant="5" id="RhB-j3-neP"/>
                             <constraint firstItem="Ez4-ZC-B6o" firstAttribute="centerY" secondItem="heu-E7-c52" secondAttribute="centerY" id="Xf9-Sv-QEk"/>
                             <constraint firstItem="cTK-Oy-saj" firstAttribute="leading" secondItem="uZo-De-SDp" secondAttribute="leading" constant="8" id="Z2t-vG-qsY"/>
-                            <constraint firstItem="m6h-iv-WZD" firstAttribute="top" secondItem="uZo-De-SDp" secondAttribute="top" id="aJw-J4-mch"/>
+                            <constraint firstItem="m6h-iv-WZD" firstAttribute="top" secondItem="uZo-De-SDp" secondAttribute="top" constant="5" id="aJw-J4-mch"/>
                             <constraint firstItem="heu-E7-c52" firstAttribute="centerY" secondItem="PSn-as-Rz7" secondAttribute="centerY" id="apz-co-wJL"/>
                             <constraint firstItem="PSn-as-Rz7" firstAttribute="leading" secondItem="m6h-iv-WZD" secondAttribute="trailing" constant="8" symbolic="YES" id="lTX-r1-c8x"/>
                             <constraint firstItem="m6h-iv-WZD" firstAttribute="leading" secondItem="uZo-De-SDp" secondAttribute="leading" constant="8" id="nRX-n7-bJe"/>
-                            <constraint firstAttribute="bottom" secondItem="cTK-Oy-saj" secondAttribute="bottom" id="qX1-X3-9xz"/>
+                            <constraint firstAttribute="bottom" secondItem="cTK-Oy-saj" secondAttribute="bottom" constant="5" id="qX1-X3-9xz"/>
                             <constraint firstItem="PSn-as-Rz7" firstAttribute="leading" secondItem="uZo-De-SDp" secondAttribute="leading" constant="36" id="vFb-2V-S63"/>
                             <constraint firstItem="PSn-as-Rz7" firstAttribute="centerY" secondItem="m6h-iv-WZD" secondAttribute="centerY" id="vS2-VK-D1g"/>
                         </constraints>
@@ -155,26 +157,29 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5YP-IN-aH2" userLabel="工具条">
-                        <rect key="frame" x="17" y="221" width="308" height="34"/>
+                        <rect key="frame" x="8" y="221" width="304" height="34"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dTF-HU-XBn">
-                                <rect key="frame" x="252" y="8" width="56" height="19"/>
+                            <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dTF-HU-XBn">
+                                <rect key="frame" x="248" y="7" width="56" height="19"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="19" id="8uq-MU-qr1"/>
-                                    <constraint firstAttribute="width" constant="56" id="RpU-qX-wL9"/>
+                                    <constraint firstAttribute="width" constant="56" id="QYm-eh-7CX"/>
+                                    <constraint firstAttribute="height" constant="19" id="VKv-OK-v7A"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                <state key="normal" title="123" image="zone_post_red">
+                                <inset key="titleEdgeInsets" minX="7" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="5" maxY="0.0"/>
+                                <state key="normal" title="回复" image="topic_comment_n">
                                     <color key="titleColor" red="1" green="0.46942787120000001" blue="0.13712519940000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <state key="highlighted" image="topic_comment_h"/>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="34" id="IYP-NH-XBj"/>
-                            <constraint firstAttribute="trailing" secondItem="dTF-HU-XBn" secondAttribute="trailing" id="LIi-hf-m54"/>
-                            <constraint firstAttribute="centerY" secondItem="dTF-HU-XBn" secondAttribute="centerY" constant="-0.5" id="jzz-kz-Yre"/>
+                            <constraint firstAttribute="centerY" secondItem="dTF-HU-XBn" secondAttribute="centerY" constant="0.5" id="dxF-wb-LaD"/>
+                            <constraint firstAttribute="trailing" secondItem="dTF-HU-XBn" secondAttribute="trailing" id="hIf-Ud-8ff"/>
                         </constraints>
                         <connections>
                             <outletCollection property="fd_collapsibleConstraints" destination="grg-7F-y9F" id="zaz-K4-KH7"/>
@@ -187,7 +192,7 @@
                     <constraint firstItem="uZo-De-SDp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="32" id="6ep-zn-n2n"/>
                     <constraint firstItem="9nI-5E-vtl" firstAttribute="top" secondItem="H1z-pe-6dA" secondAttribute="bottom" id="CT8-Fi-9uX"/>
                     <constraint firstAttribute="trailingMargin" secondItem="5YP-IN-aH2" secondAttribute="trailing" id="E5c-xr-xuo"/>
-                    <constraint firstItem="5YP-IN-aH2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="9" id="Iyp-KN-CHp"/>
+                    <constraint firstItem="5YP-IN-aH2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Iyp-KN-CHp"/>
                     <constraint firstItem="5YP-IN-aH2" firstAttribute="top" secondItem="uZo-De-SDp" secondAttribute="bottom" id="JWq-th-hEt"/>
                     <constraint firstItem="H1z-pe-6dA" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="X9a-xM-i8v"/>
                     <constraint firstItem="9nI-5E-vtl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Y9I-e4-ulq"/>
@@ -199,6 +204,7 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="buildingFollorlabel" destination="fUF-1d-QJL" id="Aao-J9-fnp"/>
+                <outlet property="bulidingOnwerView" destination="zfX-XW-3zF" id="YXB-36-AbT"/>
                 <outlet property="contentLabel" destination="Duh-J3-QEa" id="QIo-3T-Bmp"/>
                 <outlet property="iconView" destination="gd1-W8-MWO" id="zzs-EN-BdZ"/>
                 <outlet property="reweetedBuildingFollorlabel" destination="Ez4-ZC-B6o" id="8gG-Kl-F31"/>
@@ -216,6 +222,8 @@
     </objects>
     <resources>
         <image name="findCategory_default" width="60" height="70"/>
-        <image name="zone_post_red" width="21" height="21"/>
+        <image name="topic_comment_h" width="14" height="13"/>
+        <image name="topic_comment_n" width="14" height="13"/>
+        <image name="topic_lz" width="33" height="18"/>
     </resources>
 </document>
